Got minecraft to startup