@@ -1,13 +1,16 @@
 package Strikeboom.XtraDrinks.blocks;
 
-import net.minecraft.block.*;
+import net.minecraft.block.BlockState;
+import net.minecraft.block.Blocks;
+import net.minecraft.block.CropsBlock;
+import net.minecraft.block.SoundType;
 import net.minecraft.block.material.Material;
 import net.minecraft.item.ItemStack;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.IBlockReader;
 import net.minecraft.world.IWorldReader;
 
-import java.util.List;
+import java.util.Arrays;
 
 public class FruitCrop extends CropsBlock {
     public FruitCrop() {
@@ -16,7 +19,7 @@ public class FruitCrop extends CropsBlock {
 
     @Override
     public boolean canSurvive(BlockState pState, IWorldReader pLevel, BlockPos pPos) {
-        return List.of(Blocks.GRASS_BLOCK,Blocks.DIRT,Blocks.COARSE_DIRT,Blocks.FARMLAND).contains(pLevel.getBlockState(pPos.below()).getBlock());
+        return Arrays.asList(Blocks.GRASS_BLOCK,Blocks.DIRT,Blocks.COARSE_DIRT,Blocks.FARMLAND).contains(pLevel.getBlockState(pPos.below()).getBlock());
     }
 
     @Override
